Adjusted line heights to fix overlapping underline of anchor elements in running body copy

--- a/modules/teaser.scss
+++ b/modules/teaser.scss
@@ -103,6 +103,10 @@
       }
     }
 
+    .kicker {
+      line-height: 1.2;
+    }
+
     .publish-date,
     .media-promo,
     .meta,
@@ -156,9 +160,10 @@
     }
 
     .summary {
+      color: $gray5;
       font-family: $sans;
       font-weight: 500; // Changed 03-10
-      color: $gray5;
+      line-height: 1.3;
 
       p {
 
